[package]
authors = ["Ken <kwill1253@gmail.com>"]
edition = "2018"
name = "ccount_service"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
diesel = {version = "1.4.4", features = ["mysql", "r2d2"]}
dotenv = "0.15.0"
pwhash = "1"
