[package]
authors = ["Ken <kwill1253@gmail.com>"]
edition = "2018"
name = "ccount_service"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.5.4"
actix-rt = "1.1.1"
actix-service = "1.0.6"
actix-web = "3"
actix-web-httpauth = "0.4.1"
base64 = "0.4.1"
diesel = {version = "1.4.4", features = ["mysql", "r2d2"]}
dotenv = "0.15.0"
rust-argon2 = "0.8"
serde = "1.0.123"
serde_json = "1.0.62"
